Delete x-overflow in body selector (bug)

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,7 +17,6 @@ body {
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
-    overflow-x: hidden; 
 }
 
 .clearfix:after { /* https://css-tricks.com/all-about-floats/ */
